maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:28: error: illegal start of simple expression
  catch {}
         ^ShortestPathMaze:33: error: illegal start of simple expression
  } catch {}
           ^ShortestPathMaze:38: error: illegal start of simple expression
  } catch {}
           ^